<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="clientId">NOT SET (insert client ID here)</string>
    <string name="licenseString">NOT SET (insert license string here)</string>
    <string name="app_name">Squad Leader</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
    <string name="sym_dict_dirname">2525cSymDictionary</string>
    <string name="map_config_prefname">mapconfig</string>
    <string name="squad_leader_home_dir">/mnt/sdcard/SquadLeader</string>
    <string name="map_config_filename">mapconfig.xml</string>
    <string name="gpx_resource_path">/com/esri/militaryapps/resources/MontereyDismounted.gpx</string>
    <string name="gpx_deployment_path">SquadLeader/simulation.gpx</string>
    <string name="open_basemap_panel">Open basemap panel</string>
    <string name="choose_basemap">Choose basemap</string>
    <string name="status_911">Set 911 status</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="from_web">From web</string>
    <string name="from_file">From file</string>
    <string name="url">URL</string>
    <string name="add_layer_fragment_tag">AddLayerDialogFragment</string>
    <string name="add_layer">Add layer</string>
    <string name="use_as_basemap">Use as basemap</string>
    <string name="create_spot_report">Create spot report</string>
    <string name="calculate_viewshed">Calculate viewshed</string>
    <string name="clear_viewshed">Clear viewshed</string>
    <string name="toggle_grid">Toggle grid</string>
    <string name="clear_messages">Clear messages</string>
    <string name="remove">Remove</string>
    <string name="clear_messages_fragment_tag">ClearMessagesFragment</string>
    <string name="go_to_mgrs">Go to MGRS location</string>
    <string name="go_to_mgrs_fragment_tag">GoToMgrsFragment</string>
    <string name="mgrs">MGRS</string>
    <string name="north_arrow_desc">North arrow (click to rotate map to north up)</string>
    <string name="cert_error_dialog_title">Accept invalid certificate?</string>
    <string name="accept">Accept</string>
    <string name="refuse_recommended">Refuse (recommended)</string>
    <string name="follow_me">Follow me</string>
    <string name="set_location_mode">Set location mode</string>
    <string name="option_location_service">Hardware (GPS)</string>
    <string name="option_simulation_builtin">Simulation (built-in)</string>
    <string name="option_simulation_file">Simulation (GPX file)</string>
    <string name="chooser_label">File chooser</string>
    <string name="display_location">Location %1$s</string>
    <string name="display_speed">Speed %1$.1f mph</string>
    <string name="display_heading">Heading %1$.0f%2$s</string>
    <string name="display_time">Time %1$s</string>
    <string name="pref_angularUnits">Angular units</string>
    <string name="pref_viewshedObserverHeight">Viewshed observer height</string>
    <string name="pref_viewshedObserverHeight_summary">&#160;(in the units that the elevation dataset uses, usually meters)</string>
    <string-array name="pref_angularUnits_entries">
        <item>Degrees</item>
        <item>Mils</item>
    </string-array>
    <string-array name="pref_angularUnits_values">
        <item>@string/wkid_degrees</item>
        <item>@string/wkid_mils</item>
    </string-array>
    <string name="pref_positionReports">Position reports</string>
    <string name="pref_positionReports_summary">Automatically send position reports to listening clients</string>
    <string name="pref_username">Username</string>
    <string name="pref_vehicleType">Vehicle type</string>
    <string name="pref_uniqueId">Unique ID</string>
    <string name="pref_sic">Symbol ID code</string>
    <string name="pref_sicDefault">SFGPEWRR-------</string>
    <string name="pref_positionReportPeriod">Position report period (ms)</string>
    <string name="pref_positionReportPeriod_summary">&#160;ms between position reports</string>
    <string name="pref_messagePort">Messaging port (1024–65535)</string>
    <string name="pref_resetApp">Reset map</string>
    <string name="pref_resetApp_summary">Reset the map to /mnt/sdcard/SquadLeader/mapconfig.xml if present or built-in settings</string>
    <string name="pref_labels">Display labels</string>
    <string name="wkid_degrees">9102</string>
    <string name="wkid_mils">9114</string>
    <string name="settings">Settings</string>
    <string name="reset_map">Reset map?</string>
    <string name="chemlight_red">Red chem light</string>
    <string name="chemlight_yellow">Yellow chem light</string>
    <string name="chemlight_green">Green chem light</string>
    <string name="chemlight_blue">Blue chem light</string>
    <string name="hint_mgrs">MGRS</string>
    <string name="size">Size</string>
    <string name="activity">Activity</string>
    <string name="location">Location</string>
    <string name="unit">Unit</string>
    <string name="datetime">Date/time (Zulu)</string>
    <string name="equipment">Equipment</string>
    <string name="title_activity_spot_report">Spot report</string>
    <string name="send">Send</string>
    <string name="toggle_labels">Toggle labels</string>
    <string name="all_layers">All layers</string>
    <string name="confirm_send_remove_message">Tell other users\' devices to delete my messages</string>
    <string name="choose_file">Choose file</string>
    <string name="add_feature_fragment_tag">AddFeatureDialogFragment</string>
    <string name="add_feature">Add feature</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="save_failed">Save failed</string>
    <string name="discard">Discard</string>
    <string name="undo">Undo</string>
    <string name="delete_point">Delete point</string>
    <string name="number_of_results">%1$d of %2$d results</string>
    <string name="navigate_back">Back</string>
    <string name="swipe_for_results">Swipe left and right to see results</string>
    <string name="could_not_edit">Could not edit: %1$s</string>
    <string name="could_not_delete">Could not delete: %1$s</string>
    <string name="popup_without_feature_table">This popup doesn\'t have an associated feature table. Its info type is %1$s instead of %2$s.</string>
    <string name="popup_feature_table_null">This popup should have a feature table, but the table is null.</string>
    <string name="popup_container_null">The popup container is null. This should not happen and is probably a bug in the Squad Leader app. Please use GitHub to submit an issue on the squad-leader-android repository.</string>
    <string name="feature_id_query_expected_single_result">Query for feature ID %1$d expected a single result but got %2$d results.</string>
    <string name="no_add_feature_listener">The Activity class %1$s does not implement AddFeatureListener.</string>
</resources>
