<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radioButton_fromWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/from_web"/>
        <RadioButton android:id="@+id/radioButton_fromFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_file"/>
    </RadioGroup>

    <LinearLayout
        android:id="@+id/layout_fromWeb"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_urlLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url" />

        <EditText
            android:id="@+id/editText_serviceUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri" />

        <CheckBox
            android:id="@+id/checkBox_basemap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_as_basemap" />

    </LinearLayout>

</LinearLayout>